--- a/GraphMed_Alpha/App.config
+++ b/GraphMed_Alpha/App.config
@@ -3,4 +3,15 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
+  <appSettings>
+    <add key="GraphDBUser" value="neo4j" />
+    <add key="GraphDBPassword" value="sysk16" />
+    <add key="GraphDBUri" value="bolt://localhost:7687" />
+    <add key="ClientUri" value ="http://localhost:7474/db/data"/>
+    <add key="ConceptsUrl" value="C:/Users/Eric Nilsson/Documents/Nodes/sct2_Concept_Snapshot_INT_20170731.txt" />
+    <add key="DescriptionsUrl" value="C:/Users/Eric Nilsson/Documents/Nodes/sct2_Description_Snapshot-en_INT_20170731.txt" />
+    <add key="description_snapshot_deluxe" value="file:///description_snapshot_deluxe.txt"/>
+    <add key="concept_snapshot_deluxe" value="file:///concept_snapshot_deluxe.txt" />
+    <add key="ClientSettingsProvider.ServiceUri" value="" />
+  </appSettings>
 </configuration>
