--- a/GraphMed_Alpha/GraphMed_Alpha.csproj
+++ b/GraphMed_Alpha/GraphMed_Alpha.csproj
@@ -70,7 +70,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Handlers\ConnectionHandler.cs" />
-    <Compile Include="Handlers\Cypher.cs" />
+    <Compile Include="Handlers\CypherHandler\Cyphers\CreateCypher.cs" />
+    <Compile Include="Handlers\CypherHandler\Cypher.cs" />
+    <Compile Include="Handlers\CypherHandler\Cyphers\LoadCypher.cs" />
+    <Compile Include="Handlers\CypherHandler\CypherHandler.cs" />
     <Compile Include="Model\Concept.cs" />
     <Compile Include="Model\Description.cs" />
     <Compile Include="Model\Node.cs" />
