fixed delete and Node base

--- a/GraphMed_Alpha/App.config
+++ b/GraphMed_Alpha/App.config
@@ -10,8 +10,8 @@
     <add key="ClientUri" value ="http://localhost:7474/db/data"/>
     <add key="ConceptsUrl" value="C:/Users/Eric Nilsson/Documents/Nodes/sct2_Concept_Snapshot_INT_20170731.txt" />
     <add key="DescriptionsUrl" value="C:/Users/Eric Nilsson/Documents/Nodes/sct2_Description_Snapshot-en_INT_20170731.txt" />
-    <add key="description_snapshot_deluxe" value="file:///description_snapshot.txt"/>
-    <add key="concept_snapshot_deluxe" value="file:///concept_snapshot.txt" />
+    <add key="description_snapshot_deluxe" value="file:///sct2_Description_Snapshot-en_INT_20170731.txt"/>
+    <add key="concept_snapshot_deluxe" value="file:///sct2_Concept_Snapshot_INT_20170731.txt" />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
 </configuration>
