Cleaned it up a bit
Added README

--- a/GraphMed_Alpha/GraphMed_Alpha.csproj
+++ b/GraphMed_Alpha/GraphMed_Alpha.csproj
@@ -70,6 +70,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DisplayHandler\Display.cs" />
     <Compile Include="Handlers\ConnectionHandler.cs" />
     <Compile Include="Handlers\CypherHandler\Cyphers\CreateCypher.cs" />
     <Compile Include="Handlers\CypherHandler\Cyphers\Cypher.cs" />
