--- a/GraphMed_Alpha/GraphMed_Alpha.csproj
+++ b/GraphMed_Alpha/GraphMed_Alpha.csproj
@@ -72,15 +72,14 @@
   <ItemGroup>
     <Compile Include="DisplayHandler\Display.cs" />
     <Compile Include="Handlers\ConnectionHandler.cs" />
-    <Compile Include="Handlers\CypherHandler\Cyphers\CreateCypher.cs" />
-    <Compile Include="Handlers\CypherHandler\Cyphers\Cypher.cs" />
-    <Compile Include="Handlers\CypherHandler\Cyphers\DeleteCypher.cs" />
-    <Compile Include="Handlers\CypherHandler\Cyphers\DropCypher.cs" />
-    <Compile Include="Handlers\CypherHandler\Cyphers\LoadCypher.cs" />
-    <Compile Include="Handlers\CypherHandler\CypherHandler.cs" />
-    <Compile Include="Handlers\CypherHandler\Cyphers\MatchCypher.cs" />
+    <Compile Include="Handlers\CypherHandlers\Cyphers\CreateCypher.cs" />
+    <Compile Include="Handlers\CypherHandlers\Cyphers\Cypher.cs" />
+    <Compile Include="Handlers\CypherHandlers\Cyphers\DeleteCypher.cs" />
+    <Compile Include="Handlers\CypherHandlers\Cyphers\DropCypher.cs" />
+    <Compile Include="Handlers\CypherHandlers\Cyphers\LoadCypher.cs" />
+    <Compile Include="Handlers\CypherHandlers\CypherHandler.cs" />
+    <Compile Include="Handlers\CypherHandlers\Cyphers\MatchCypher.cs" />
     <Compile Include="Handlers\FileHandler.cs" />
-    <Compile Include="Handlers\TextFileHandler.cs" />
     <Compile Include="Model\Concept.cs" />
     <Compile Include="Model\Description.cs" />
     <Compile Include="Model\Node.cs" />
